tests/snapshots/regression/precedence__arithmetic_precedence.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/precedence/arithmetic_precedence.flx
exit_code: 1

[ 1 of 11] Compiling  Assert
[ 2 of 11] Compiling  Array
[ 3 of 11] Compiling  List
[ 4 of 11] Compiling  Either
[ 5 of 11] Compiling  IO
[ 6 of 11] Compiling  Math
[ 7 of 11] Compiling  Numeric
[ 8 of 11] Compiling  Option
[ 9 of 11] Compiling  Primops
[10 of 11] Compiling  String
• 5 errors • tests/fixtures/precedence/arithmetic_precedence.flx
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Console).

  tests/fixtures/precedence/arithmetic_precedence.flx:1:1
  |
1 | print(1 + 2 * 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  tests/fixtures/precedence/arithmetic_precedence.flx:1:1
  |
1 | print(1 + 2 * 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Console).

  tests/fixtures/precedence/arithmetic_precedence.flx:2:1
  |
2 | print(1 * 2 + 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Console).

  tests/fixtures/precedence/arithmetic_precedence.flx:3:1
  |
3 | print(1 + 2 + 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Console).

  tests/fixtures/precedence/arithmetic_precedence.flx:4:1
  |
4 | print(1 - 2 - 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 5 errors.
